dynamix/force-app/main/default/objects/Opportunity/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Architecture and Construction</fullName>
            </value>
            <value>
                <fullName>Education and Training</fullName>
            </value>
            <value>
                <fullName>BSFI Banking services</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Healthcare and Pharma</fullName>
            </value>
            <value>
                <fullName>HORECA</fullName>
            </value>
            <value>
                <fullName>Govt</fullName>
            </value>
            <value>
                <fullName>Tourism</fullName>
            </value>
            <value>
                <fullName>FMCG</fullName>
            </value>
            <value>
                <fullName>FMCD</fullName>
            </value>
            <value>
                <fullName>Defense</fullName>
            </value>
            <value>
                <fullName>Automobile</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Law</fullName>
            </value>
            <value>
                <fullName>IT / ITES</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Government and Public Administration</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Corrections and Security Manufacturing</fullName>
            </value>
            <value>
                <fullName>Business Management and Administration</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Hotel Restaurant</fullName>
            </value>
            <value>
                <fullName>Areo space defence</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Hospitality and Tourism</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>