dynamix/force-app/main/default/objects/Opportunity/fields/Interested_in_Commercial_Properties__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Commercial_Properties__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in Commercial Properties</label>
    <type>Checkbox</type>
</CustomField>