dynamix/force-app/main/default/objects/Opportunity/fields/Interested_Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Interested_Property_Type__c</fullName>
    <label>Interested Property Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 RK</fullName>
            </value>
            <value>
                <fullName>1 BHK</fullName>
            </value>
            <value>
                <fullName>2 BHK</fullName>
            </value>
            <value>
                <fullName>1.5 BHK</fullName>
            </value>
            <value>
                <fullName>3 BHK</fullName>
            </value>
            <value>
                <fullName>3+ BHK</fullName>
            </value>
            <value>
                <fullName>2.5 BHK</fullName>
            </value>
            <value>
                <fullName>3.5 BHK</fullName>
            </value>
            <value>
                <fullName>4 BHK</fullName>
            </value>
            <value>
                <fullName>5 BHK</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Penthouse</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Row House</fullName>
            </value>
            <value>
                <fullName>Plot</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Studio Apartments</fullName>
            </value>
            <value>
                <fullName>Plot 30X40</fullName>
            </value>
            <value>
                <fullName>Plot 30X50</fullName>
            </value>
            <value>
                <fullName>Plot 30X60</fullName>
            </value>
            <value>
                <fullName>Plot 40X60</fullName>
            </value>
            <value>
                <fullName>Plot 50X60</fullName>
            </value>
            <value>
                <fullName>Plot-Odd Sizes</fullName>
            </value>
            <value>
                <fullName>Farm House</fullName>
            </value>
            <value>
                <fullName>Shop</fullName>
            </value>
            <value>
                <fullName>2 BHK G</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>