dynamix/force-app/main/default/objects/Opportunity/fields/Is_Booking_Form_Submitted_by_Customer__c.field-meta.xml
<CustomField>
    <fullName>Is_Booking_Form_Submitted_by_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Booking Form Submitted by Customer</label>
    <type>Checkbox</type>
</CustomField>