dynamix/force-app/main/default/objects/Opportunity/fields/Is_Broker_Present_at_Site__c.field-meta.xml
<CustomField>
    <fullName>Is_Broker_Present_at_Site__c</fullName>
    <label>Is Broker Present at Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>