dynamix/force-app/main/default/objects/Opportunity/fields/IsNew__c.field-meta.xml
<CustomField>
    <fullName>IsNew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsNew</label>
    <type>Checkbox</type>
</CustomField>