dynamix/force-app/main/default/objects/Opportunity/fields/KYC_Completed__c.field-meta.xml
<CustomField>
    <fullName>KYC_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KYC Completed</label>
    <type>Checkbox</type>
</CustomField>