dynamix/force-app/main/default/objects/Opportunity/fields/Last_Call_Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Attempt_Date__c</fullName>
    <label>Last Call Attempt Date</label>
    <type>Date</type>
</CustomField>