dynamix/force-app/main/default/objects/Opportunity/fields/Last_Call_Attempted_by__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Attempted_by__c</fullName>
    <label>Last Call Attempted by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>