dynamix/force-app/main/default/objects/Opportunity/fields/Last_Call_Attended_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Attended_By__c</fullName>
    <label>Last Call Attended By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abhishree Kolekar</fullName>
            </value>
            <value>
                <fullName>Siddharth Sharma</fullName>
            </value>
            <value>
                <fullName>Akshay Patil</fullName>
            </value>
            <value>
                <fullName>Animesh Das</fullName>
            </value>
            <value>
                <fullName>Jay Goenka</fullName>
            </value>
            <value>
                <fullName>Siddhesh Ahirrao</fullName>
            </value>
            <value>
                <fullName>Manas Dixit</fullName>
            </value>
            <value>
                <fullName>Pravin Fernandes</fullName>
            </value>
            <value>
                <fullName>Divanshu Gupta</fullName>
            </value>
            <value>
                <fullName>Mehul Kothari</fullName>
            </value>
            <value>
                <fullName>Bhagyashree Nahata</fullName>
            </value>
            <value>
                <fullName>Pramod Yadav</fullName>
            </value>
            <value>
                <fullName>Beena Patel</fullName>
            </value>
            <value>
                <fullName>Javed Shaikh</fullName>
            </value>
            <value>
                <fullName>Khushboo Sharma</fullName>
            </value>
            <value>
                <fullName>Aadil Thasariya</fullName>
            </value>
            <value>
                <fullName>Jessie Kuruvilla</fullName>
            </value>
            <value>
                <fullName>Tanish Patil</fullName>
            </value>
            <value>
                <fullName>Derrick D&apos;sa</fullName>
            </value>
            <value>
                <fullName>Saba Sayed</fullName>
            </value>
            <value>
                <fullName>Neelima Patil</fullName>
            </value>
            <value>
                <fullName>Rinkal Lakhani</fullName>
            </value>
            <value>
                <fullName>Gaurav Mundaye</fullName>
            </value>
            <value>
                <fullName>Nurraj Gaire</fullName>
            </value>
            <value>
                <fullName>Mansi Dawda</fullName>
            </value>
            <value>
                <fullName>Vikas giri</fullName>
            </value>
            <value>
                <fullName>Mahima</fullName>
            </value>
            <value>
                <fullName>Mohsina Shaikh</fullName>
            </value>
            <value>
                <fullName>Nupur chatterjee</fullName>
            </value>
            <value>
                <fullName>Shifa Khan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>