dynamix/force-app/main/default/objects/Opportunity/fields/Last_Call_Description__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Description__c</fullName>
    <label>Last Call Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>