dynamix/force-app/main/default/objects/Opportunity/fields/Last_Site_Visit_Date_CIF__c.field-meta.xml
<CustomField>
    <fullName>Last_Site_Visit_Date_CIF__c</fullName>
    <label>Last Site Visit Date</label>
    <type>Date</type>
</CustomField>