dynamix/force-app/main/default/objects/Opportunity/fields/Latest_Follow_Up_date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Follow_Up_date__c</fullName>
    <label>Latest Follow Up date</label>
    <type>Date</type>
</CustomField>