dynamix/force-app/main/default/objects/Opportunity/fields/Linked_Document_for_Source_Change__c.field-meta.xml
<CustomField>
    <fullName>Linked_Document_for_Source_Change__c</fullName>
    <label>Linked Document for Source Change</label>
    <type>Url</type>
</CustomField>