dynamix/force-app/main/default/objects/Opportunity/fields/Linked_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Linked_Enquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Enquiry</label>
    <referenceTo>Enquiry__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>