dynamix/force-app/main/default/objects/Opportunity/fields/Location_is_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Location_is_Accepted__c</fullName>
    <label>Location is Accepted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>