dynamix/force-app/main/default/objects/Opportunity/fields/Miscellaneous_Unit_Configurations__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Unit_Configurations__c</fullName>
    <label>Miscellaneous Unit Configurations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Floor Rise Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>