dynamix/force-app/main/default/objects/Opportunity/fields/Mode_Of_Transport_To_Visit_The_Site__c.field-meta.xml
<CustomField>
    <fullName>Mode_Of_Transport_To_Visit_The_Site__c</fullName>
    <label>Mode Of Transport To Visit The Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4 Wheeler</fullName>
            </value>
            <value>
                <fullName>2 Wheeler</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Cab</fullName>
            </value>
            <value>
                <fullName>Self Vehicle</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>