dynamix/force-app/main/default/objects/Opportunity/fields/Nature_of_Purchase1__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Purchase1__c</fullName>
    <label>Nature of Purchase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>