dynamix/force-app/main/default/objects/Opportunity/fields/Nature_of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Purchase__c</fullName>
    <label>Purpose of Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Self Use</fullName>
            </value>
            <value>
                <fullName>End Use</fullName>
                <isActive>false</isActive>
                <label>End Use</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>