dynamix/force-app/main/default/objects/Opportunity/fields/Nature_of_Use__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Use__c</fullName>
    <label>Nature of Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nature_of_Use</valueSetName>
    </valueSet>
</CustomField>