dynamix/force-app/main/default/objects/Opportunity/fields/new_channel_partner__c.field-meta.xml
<CustomField>
    <fullName>new_channel_partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Channel Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (New Channel Partner)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>