dynamix/force-app/main/default/objects/Opportunity/fields/new_referral_by_customer__c.field-meta.xml
<CustomField>
    <fullName>new_referral_by_customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>new referral by customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (new referral by customer)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>