dynamix/force-app/main/default/objects/Opportunity/fields/new_referral_mobile_number__c.field-meta.xml
<CustomField>
    <fullName>new_referral_mobile_number__c</fullName>
    <label>new referral mobile number</label>
    <type>Phone</type>
</CustomField>