dynamix/force-app/main/default/objects/Opportunity/fields/new_referral_name__c.field-meta.xml
<CustomField>
    <fullName>new_referral_name__c</fullName>
    <label>new referral name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>