dynamix/force-app/main/default/objects/Opportunity/fields/new_referrral_type__c.field-meta.xml
<CustomField>
    <fullName>new_referrral_type__c</fullName>
    <label>new referrral type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>