dynamix/force-app/main/default/objects/Opportunity/fields/New_Source__c.field-meta.xml
<CustomField>
    <fullName>New_Source__c</fullName>
    <label>New Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Presales</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Referred by Existing Customer</fullName>
            </value>
            <value>
                <fullName>Referred by Others</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Online Ads</fullName>
            </value>
            <value>
                <fullName>Hoarding</fullName>
            </value>
            <value>
                <fullName>Newspaper Ad</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>IVR Call</fullName>
            </value>
            <value>
                <fullName>Property Portal</fullName>
            </value>
            <value>
                <fullName>Email/SMS/WhatsApp</fullName>
            </value>
            <value>
                <fullName>Exhibition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>