dynamix/force-app/main/default/objects/Opportunity/fields/new_sourcing_partner__c.field-meta.xml
<CustomField>
    <fullName>new_sourcing_partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>new sourcing partner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>