dynamix/force-app/main/default/objects/Opportunity/fields/No_of_Parking_s_Spots_Required__c.field-meta.xml
<CustomField>
    <fullName>No_of_Parking_s_Spots_Required__c</fullName>
    <label>No. of Parking(s) Spots Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>