dynamix/force-app/main/default/objects/Opportunity/fields/No_of_Total_Revisit__c.field-meta.xml
<CustomField>
    <fullName>No_of_Total_Revisit__c</fullName>
    <formula>IF(No_of_Total_Visits__c &gt;0, No_of_Total_Visits__c-1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Total Revisit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>