dynamix/force-app/main/default/objects/Opportunity/fields/No_of_Total_Visits__c.field-meta.xml
<CustomField>
    <fullName>No_of_Total_Visits__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of Total Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>