dynamix/force-app/main/default/objects/Opportunity/fields/Old_Source__c.field-meta.xml
<CustomField>
    <fullName>Old_Source__c</fullName>
    <label>New Walk in Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Magicbricks</fullName>
            </value>
            <value>
                <fullName>Commonfloor</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Newspaper</fullName>
            </value>
            <value>
                <fullName>Hoarding</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Sms</fullName>
            </value>
            <value>
                <fullName>Builder Website</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Pre Sale</fullName>
            </value>
            <value>
                <fullName>Existing Client</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Paytm</fullName>
            </value>
            <value>
                <fullName>Big Bazaar Activity</fullName>
            </value>
            <value>
                <fullName>Focused Leads</fullName>
            </value>
            <value>
                <fullName>Homeloans Calling</fullName>
            </value>
            <value>
                <fullName>Re-churn Existing fresh Leads</fullName>
            </value>
            <value>
                <fullName>Nobroker</fullName>
            </value>
            <value>
                <fullName>Career Socially</fullName>
            </value>
            <value>
                <fullName>Paper Inserts</fullName>
            </value>
            <value>
                <fullName>Cab</fullName>
            </value>
            <value>
                <fullName>Paytunes</fullName>
            </value>
            <value>
                <fullName>Toll Free</fullName>
            </value>
            <value>
                <fullName>Ldspl mumbai</fullName>
            </value>
            <value>
                <fullName>lvr</fullName>
            </value>
            <value>
                <fullName>Test source</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Exhibition</fullName>
            </value>
            <value>
                <fullName>Project Site Hoarding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>