dynamix/force-app/main/default/objects/Opportunity/fields/Opportunity_Qualification_Tag__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Qualification_Tag__c</fullName>
    <label>Opportunity Qualification Tag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>