dynamix/force-app/main/default/objects/Opportunity/fields/Oppportunity_Category_SM__c.field-meta.xml
<CustomField>
    <fullName>Oppportunity_Category_SM__c</fullName>
    <label>Oppportunity Category (SM)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Future Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>