dynamix/force-app/main/default/objects/Opportunity/fields/Orientation__c.field-meta.xml
<CustomField>
    <fullName>Orientation__c</fullName>
    <label>Orientation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corner</fullName>
            </value>
            <value>
                <fullName>Stacked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>