dynamix/force-app/main/default/objects/Opportunity/fields/OTP_Submitted__c.field-meta.xml
<CustomField>
    <fullName>OTP_Submitted__c</fullName>
    <label>OTP Submitted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>