dynamix/force-app/main/default/objects/Opportunity/fields/Parking__c.field-meta.xml
<CustomField>
    <fullName>Parking__c</fullName>
    <label>Need Parking Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Sheltered</fullName>
            </value>
            <value>
                <fullName>2 wheeler</fullName>
            </value>
            <value>
                <fullName>4 wheeler</fullName>
            </value>
            <value>
                <fullName>No vehicle</fullName>
                <isActive>false</isActive>
                <label>No vehicle</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>